# LocalMind

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  LocalMind.bat  PLAN.md  README.md  TASK.md  apply_memory_viewer.py  audit_report.md  backend_audit.txt  bump_build.py  cleanup_chat_route.py  hw_status_apply.py  install.ps1  migrate_models.ps1  pyproject.toml  requirements.txt  run.py  sprint1_rag_apply.py  uninstall.ps1  version.json
.agents/workflows/: bug.md  docs.md  feature.md  research.md  task.md
backend/: __init__.py  agent.py.bak  autonomy.py  autonomy_legacy.py  code_editor.py  config.py  db.py  digest.py  gemini_client.py  git_ops.py  meta_critic.py  model_router.py  model_router.py.bak  notifications.py  priority_queue.py  proposals.py  research_engine.py  research_engine.py.bak  self_improver.py  server.py  todo_harvester.py  tools.py
backend/research/: web.py  (+3 more)
data/: priorities.json
docs/: BUGS.md  BUSINESS_STRATEGY.md  FEATURES.md  MARKET_RESEARCH.md  PROGRESS.md  Python Meta-cognition Reading Plan.md  RESEARCH.md  TASK.md  TASKS_BACKLOG.md
frontend/: app.js  app.js.bak  eslint.config.js  index.html  manifest.json  package.json  stitch_export.html  style.css  style.css.bak  style.css.pre-dedup.bak  sw.js
scripts/: bump_build.py  create_shortcut.ps1  generate_docs.py  hw_status_apply.py  start_legacy.ps1  ui_redesign_v4.py
tests/: conftest.py  test_autonomy.py  test_dependency_manager.py  test_gemini_client.py  test_git_tools.py  test_model_router.py  test_propose_action.py  test_research.py  test_server.py  test_tools.py
(+87 files in other folders)
